@startuml
namespace main {
    class AndroidTvConfig << (S,Aquamarine) >> {
        + Abc string

        + GetAds() string

    }
    class CommonConfig << (S,Aquamarine) >> {
        + ID string

        + GetID() string

    }
    class IosTvConfig << (S,Aquamarine) >> {
        + Xyz string

        + GetAds() string

    }
    interface PlatformConfigI  {
        + GetAds() string
        + GetID() string

    }
}
"main.CommonConfig" *-- "main.AndroidTvConfig"
"main.CommonConfig" *-- "main.IosTvConfig"



@enduml
